# MagicRegex

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
magicregex/: __init__.py  magicregex.py  tokens.py
src/: magic_regex.py
tests/: _test_import.py  conftest.py  import_test.py  requirements.txt  test_magicregex.py  test_magicregex_class.py  types.py
